main/default/objects/Project_Task_Log__c/Project_Task_Log__c.object-meta.xml
<CustomObject>
    <label>Project Task Log</label>
    <nameField>
        <displayFormat>PTL{00000}</displayFormat>
        <label>Project Task Log Numer</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Task Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>