main/default/objects/Project_Task_Log__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Project Task Logs</relationshipLabel>
    <relationshipName>Project_Task_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>